--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ministryofjustice/fb-editor-node",
   "version": "0.0.146",
   "engines": {
-    "node": "10.15.3"
+    "node": "12.4.0"
   },
   "description": "Form Builder Editor app (Node version)",
   "main": "index.js",
@@ -12,25 +12,20 @@
   },
   "scripts": {
     "start": "node bin/start.js",
-    "lint": "npm-run-all lint:lib",
-    "lint:lib": "eslint lib",
-    "test": "npm-run-all lint test:all",
-    "test:all": "npm-run-all test:unit",
-    "test:unit": "tape lib/**/*.unit.spec.js"
+    "test": "eslint lib"
   },
   "author": "github@alex.fu2k.org",
   "license": "MIT",
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.0.7",
-    "npm-run-all": "^4.1.5",
     "tape": "^4.10.2"
   },
   "dependencies": {
-    "@ministryofjustice/fb-runner-node": "0.0.146",
+    "@ministryofjustice/fb-runner-node": "0.0.147",
     "@ministryofjustice/fb-specification": "^0.3.2",
     "@ministryofjustice/fb-utils-node": "^0.1.6",
     "ajv": "^6.10.0",
-    "csvtojson": "^2.0.8",
+    "csvtojson": "^2.0.10",
     "deep-equal": "^1.0.1",
     "flat": "^4.1.0",
     "immer": "~1.7.2",
