--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ jspm_packages
 
 # Visual Studio Code files
 .vscode
+
+# User-defined NPM configuration
+.npmrc
+
+# User-defined NVM configuration
+.nvmrc
+
+# User-defined (AOB)
+.envmocks
