--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": "12.4.0"
   },
-  "description": "Form Builder Editor app (Node version)",
+  "description": "Form Builder Editor (for Node)",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,19 +12,17 @@
   },
   "scripts": {
     "start": "node bin/start.js",
-    "lint": "npm-run-all lint:lib",
-    "lint:lib": "eslint lib",
-    "test": "echo \"No tests specified yet\" && exit 0",
-    "test:all": "npm-run-all test:unit",
-    "test:unit": "tape lib/**/*.unit.spec.js"
+    "lint": "eslint lib",
+    "lint:fix": "eslint lib --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "github@alex.fu2k.org",
+  "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "license": "MIT",
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.0.7",
-    "tape": "^4.11.0"
+    "@ministryofjustice/eslint-config-fb": "^1.1.2"
   },
   "dependencies": {
+    "@ministryofjustice/fb-components-core": "^3.1.0-7",
     "@ministryofjustice/fb-runner-node": "0.0.160",
     "@ministryofjustice/fb-specification": "^0.3.3",
     "@ministryofjustice/fb-utils-node": "^0.1.6",
