--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "flat": "^5.0.0",
     "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
+    "module-alias": "^2.2.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.1.4"
+  },
+  "_moduleAliases": {
+    "~" : "./lib"
   }
 }
