--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,20 @@
 version: 2.1
 
 jobs:
+  lint_and_test:
+    docker:
+      - image: circleci/node:12.4.0
+    steps:
+      - checkout
+      - run:
+          name: Install
+          command: npm install
+      - run:
+          name: Lint
+          command: npm run lint
+      - run:
+          name: Test
+          command: npm run test
   publish:
     docker:
       - image: circleci/node:12.4.0
@@ -18,8 +32,9 @@ jobs:
 
 workflows:
   version: 2
-  publish:
+  commit-workflow:
     jobs:
+      - lint_and_test
       - publish:
           filters:
             tags:
