--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node bin/start.js",
-    "lint": "eslint lib",
-    "lint:fix": "eslint lib --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint lib test",
+    "lint:fix": "eslint lib test --fix",
+    "test": "mocha test --recursive"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": {
@@ -32,7 +32,12 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.1.4"
+    "@ministryofjustice/eslint-config-fb": "^1.1.4",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   },
   "_moduleAliases": {
     "~/fb-editor-node": "./lib"
