--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sinon-chai": "^3.3.0"
   },
   "_moduleAliases": {
-    "~/fb-editor-node": "./lib"
+    "~/fb-editor-node": "./lib",
+    "~/fb-runner-node": "./node_modules/@ministryofjustice/fb-runner-node/lib"
   }
 }
