`@ministryofjustice/module-alias`

--- a/.npmignore
+++ b/.npmignore
@@ -5,3 +5,21 @@
 .nvmrc
 .eslintignore
 .eslintrc
+
+.idea
+.nyc_output
+
+scripts
+test
+
+DEPLOY.md
+
+Makefile
+Dockerfile
+docker-compose.yml
+
+*.sh
+webpack.config.js
+
+*.unit.spec.js
+*.unit.mock-data.js
