--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "node": "12.4.0"
   },
   "description": "Form Builder Editor (for Node)",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "./index.js",
+    "start": "node bin/start",
     "lint": "eslint lib test",
     "lint:fix": "eslint lib test --fix",
     "test": "mocha test --recursive"
@@ -19,16 +19,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ministryofjustice/fb-runner-node": "^0.1.5",
+    "@ministryofjustice/fb-runner-node": "^0.1.12",
     "@ministryofjustice/fb-specification": "^0.3.4",
     "@ministryofjustice/fb-utils-node": "^0.1.7",
+    "@ministryofjustice/module-alias": "^1.0.0",
     "ajv": "^6.10.2",
     "csvtojson": "^2.0.10",
     "deep-equal": "^1.1.0",
     "flat": "^5.0.0",
     "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
-    "module-alias": "^2.2.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
