--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "MIT",
   "dependencies": {
     "@ministryofjustice/fb-runner-node": "^0.1.12",
-    "@ministryofjustice/fb-specification": "^0.3.4",
-    "@ministryofjustice/fb-utils-node": "^0.1.7",
+    "@ministryofjustice/fb-specification": "^0.3.6",
+    "@ministryofjustice/fb-utils-node": "^0.1.8",
     "@ministryofjustice/module-alias": "^1.0.0",
     "ajv": "^6.10.2",
     "csvtojson": "^2.0.10",
@@ -40,6 +40,7 @@
     "sinon-chai": "^3.3.0"
   },
   "_moduleAliases": {
-    "~/fb-editor-node": "./lib"
+    "~/fb-editor-node": "./lib",
+    "~/fb-runner-node": "./node_modules/@ministryofjustice/fb-runner-node/lib"
   }
 }
