--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ministryofjustice/fb-runner-node": "^0.1.12",
+    "@ministryofjustice/fb-runner-node": "^0.1.13",
     "@ministryofjustice/fb-specification": "^0.3.6",
     "@ministryofjustice/fb-utils-node": "^0.1.8",
-    "@ministryofjustice/module-alias": "^1.0.0",
+    "@ministryofjustice/module-alias": "^1.0.5",
     "ajv": "^6.10.2",
     "csvtojson": "^2.0.10",
-    "deep-equal": "^1.1.0",
+    "deep-equal": "^1.1.1",
     "flat": "^5.0.0",
     "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@ministryofjustice/eslint-config-fb": "^1.1.4",
+    "@ministryofjustice/eslint-config-fb": "^1.1.5",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "proxyquire": "^2.1.3",
@@ -40,7 +40,6 @@
     "sinon-chai": "^3.3.0"
   },
   "_moduleAliases": {
-    "~/fb-editor-node": "./lib",
-    "~/fb-runner-node": "./node_modules/@ministryofjustice/fb-runner-node/lib"
+    "~/fb-editor-node": "./lib"
   }
 }
