--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "csvtojson": "^2.0.10",
     "deep-equal": "^1.1.1",
     "flat": "^5.0.0",
+    "glob-all": "^3.1.0",
     "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
     "uuid": "^3.3.3"
