--- a/package.json
+++ b/package.json
@@ -8,9 +8,26 @@
   "main": "./index.js",
   "scripts": {
     "start": "node bin/start",
-    "lint": "eslint lib test",
-    "lint:fix": "eslint lib test --fix",
-    "test": "mocha test --recursive"
+    "build": "cross-env NODE_ENV=production concurrently -r \"npm run gulp -- build\" \"webpack\"",
+    "build:watch": "npm run gulp -- build:watch",
+    "build:fonts": "npm run gulp -- build:fonts",
+    "build:fonts:watch": "npm run gulp -- build:fonts:watch",
+    "build:images": "npm run gulp -- build:images",
+    "build:images:watch": "npm run gulp -- build:images:watch",
+    "build:js": "webpack",
+    "build:js:watch": "npm run build:js -- --watch",
+    "build:css": "npm run gulp -- build:css",
+    "build:css:watch": "npm run gulp -- build:css:watch",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix",
+    "lint:js": "eslint *.js lib test",
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint:css": "stylelint build/assets/sass",
+    "lint:css:fix": "npm run lint:css -- --fix",
+    "test": "mocha test --recursive",
+    "transform": "npm run gulp -- transform",
+    "gulp": "gulp --color",
+    "pre-commit": "npm run build && git add assets"
   },
   "author": "Form Builder Team <form-builder-team@digital.justice.gov.uk>",
   "repository": {
@@ -33,11 +50,35 @@
   },
   "devDependencies": {
     "@ministryofjustice/eslint-config-fb": "^1.1.6",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cssnano": "^4.1.10",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-all": "^1.1.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-css-purge": "^3.0.9",
+    "gulp-debug": "^4.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "mocha": "^6.2.2",
+    "postcss-normalize": "^8.0.1",
+    "postcss-scss": "^2.0.0",
     "proxyquire": "^2.1.3",
     "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0"
+    "sinon-chai": "^3.3.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-recommended-scss": "^4.1.0",
+    "stylelint-scss": "^3.13.0",
+    "terser-webpack-plugin": "^2.3.1",
+    "vinyl-paths": "^3.0.1",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   },
   "_moduleAliases": {
     "~/fb-editor-node": "./lib"
