--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ministryofjustice/fb-runner-node": "^0.1.19",
+    "@ministryofjustice/fb-runner-node": "0.1.24",
     "@ministryofjustice/fb-utils-node": "^0.1.8",
     "@ministryofjustice/module-alias": "^1.0.8",
     "ajv": "^6.10.2",
@@ -36,8 +36,8 @@
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
     "proxyquire": "^2.1.3",
-    "sinon": "^8.0.1",
-    "sinon-chai": "^3.3.0"
+    "sinon": "^8.0.4",
+    "sinon-chai": "^3.4.0"
   },
   "_moduleAliases": {
     "~/fb-editor-node": "./lib"
