--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "glob-all": "^3.1.0",
     "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
