--- a/package.json
+++ b/package.json
@@ -57,12 +57,19 @@
     "@babel/preset-env": "^7.8.3",
     "@ministryofjustice/eslint-config-fb": "^1.1.8",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.2",
+    "concurrently": "^5.1.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-all": "^1.1.0",
     "gulp-clean-css": "^4.2.0",
@@ -73,7 +80,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "husky": "^4.2.1",
-    "mocha": "^7.0.0",
+    "mocha": "^7.0.1",
     "postcss-normalize": "^8.0.1",
     "postcss-scss": "^2.0.0",
     "proxyquire": "^2.1.3",
