--- a/package.json
+++ b/package.json
@@ -43,15 +43,11 @@
     "ajv": "^6.11.0",
     "autosize": "^4.0.2",
     "cross-env": "^7.0.0",
-    "csvtojson": "^2.0.10",
     "deep-equal": "^2.0.1",
     "dragula": "^3.7.2",
-    "flat": "^5.0.0",
     "glob-all": "^3.1.0",
-    "json2csv": "^4.5.4",
     "jsonpath": "^1.0.2",
-    "lodash.clonedeep": "^4.5.0",
-    "uuid": "^7.0.0"
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.4",
