--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "@ministryofjustice/fb-runner-node": "0.1.47",
+    "@ministryofjustice/fb-transformers": "^1.0.3",
     "@ministryofjustice/module-alias": "^1.0.13",
     "ajv": "^6.12.0",
     "autosize": "^4.0.2",
