--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "deep-equal": "^2.0.1",
     "dragula": "^3.7.2",
     "ensure-dir": "^0.1.0",
+    "express": "^4.17.1",
     "glob-all": "^3.2.1",
     "jsonpath": "^1.0.2",
+    "jsonschema": "^1.2.5",
     "lodash.clonedeep": "^4.5.0",
     "strip-ansi": "^6.0.0"
   },
