--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ministryofjustice/fb-runner-node": "0.3.5",
     "@ministryofjustice/fb-transformers": "^1.0.7",
     "@ministryofjustice/module-alias": "^1.0.16",
+    "@ministryofjustice/frontend": "0.0.19-alpha",
     "ajv": "^6.12.0",
     "autosize": "^4.0.2",
     "cross-env": "^7.0.2",
