--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   lint_and_test:
     docker:
-      - image: circleci/node:12.4.0
+      - image: cimg/node:12.4.0
     steps:
       - checkout
       - run:
