--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ministryofjustice/fb-editor-node",
   "version": "0.2.14",
   "engines": {
-    "node": ">=12.4.0"
+    "node": ">=14.20.1 <15.0.0"
   },
   "description": "Form Builder Editor (for Node)",
   "main": "./index.js",
